fixed sun.misc.base64 build issue